--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,1 +1,36 @@
 @charset "UTF-8";
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body{
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100vw;
+    height: 100vh;
+}
+body{
+    background: url(../imagens/fundo-madeira.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+}
+
+section#iphone{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    background: url(../imagens/frame-iphone.png);
+
+    width: 311px;
+    height: 627px;
+    
+}
